--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,14 @@ body {
 .highcharts-legend-item {
     margin: 5px 0px 5px 0px;
 }
+
+.donut-chart-container {
+    min-width: 400px;
+    max-width: 800px;
+}
+
+.bar-chart-container {
+    min-width: 400px;
+    height: 200px;
+    max-width: 800px;
+}
