--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,11 @@ body {
 }
 
 .donut-chart-container {
-    min-width: 400px;
-    max-width: 800px;
+    /*min-width: 400px;*/
+    /*max-width: 800px;*/
 }
 
 .bar-chart-container {
-    min-width: 400px;
+    width: 800px;
     height: 200px;
-    max-width: 800px;
 }
