--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    font-family: "Tahoma", Geneva, sans-serif;
+    /*font-family: "Tahoma", Geneva, sans-serif;*/
+    font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
     padding: 0px 20px 0px 20px;
     color: #404040;
 }
@@ -23,4 +24,18 @@ body {
     width: 550px;
     background-color: lightgray;
     margin-left: 58px;
+}
+
+.standards-widget-title {
+    color: #333333;
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 18px;
+}
+
+.standards-widget-subtitle {
+    color: #555555;
+    font-size: 14px;
+    font-weight: 400;
+    margin-left: 18px;
 }
