--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,14 @@ body {
     margin-left: 58px;
 }
 
-.standards-widget-title {
+.widget-title {
     color: #333333;
     font-size: 20px;
     font-weight: 400;
     margin-left: 18px;
 }
 
-.standards-widget-subtitle {
+.widget-subtitle {
     color: #555555;
     font-size: 14px;
     font-weight: 400;
