--- a/styles.css
+++ b/styles.css
@@ -5,27 +5,6 @@ body {
     color: #404040;
 }
 
-.highcharts-legend-item {
-    margin: 5px 0px 5px 0px;
-}
-
-.donut-chart-container {
-    /*min-width: 400px;*/
-    /*max-width: 800px;*/
-}
-
-.bar-chart-container {
-    width: 800px;
-    height: 200px;
-}
-
-.bar-chart-divider {
-    height: 2px;
-    width: 550px;
-    background-color: lightgray;
-    margin-left: 58px;
-}
-
 .widget-container {
     width: 800px;
 }
@@ -46,6 +25,27 @@ body {
     font-size: 14px;
     font-weight: 400;
     margin-left: 18px;
+}
+
+.highcharts-legend-item {
+    margin: 5px 0px 5px 0px;
+}
+
+.donut-chart-container {
+    /*min-width: 400px;*/
+    /*max-width: 800px;*/
+}
+
+.bar-chart-container {
+    width: 100%;
+    height: 200px;
+}
+
+.bar-chart-divider {
+    height: 2px;
+    width: 550px;
+    background-color: lightgray;
+    margin-left: 58px;
 }
 
 .building-select {
